# codebase-mcp

./: .coverage  .dockerignore  .env  .env.example  .gitignore  =0.19.0  =3.1.0  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  AUTO_SWITCH_RETEST_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_MCP_ANALYSIS.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_ANALYSIS_SUMMARY.txt  DEPLOYMENT_ARCHITECTURE_ANALYSIS.md  DEPLOYMENT_QUICK_REFERENCE.md  DOCKER_BEST_PRACTICES_SUMMARY.md  DOCKER_RESEARCH.md  DOCKER_RESEARCH_INDEX.md  Dockerfile  IMPLEMENTATION_STATUS.md  MCP_CLIENT_FINAL_TEST_PROMPT.txt  MCP_SERVER_STATUS.md  Makefile  PHASE-0-CHECKLIST.md  README.md  REAL_PROJECT_TEST_PROMPTS.md  SESSION_HANDOFF.md  SESSION_HANDOFF_FASTMCP.md  SESSION_HANDOFF_MCP_TESTING.md  T005_VALIDATION_SUMMARY.md  T021_IMPLEMENTATION_SUMMARY.md  T031_IMPLEMENTATION_SUMMARY.md  T034-T037_SUMMARY.md  T041_IMPLEMENTATION_SUMMARY.md  T045_EXECUTION_SUMMARY.md  TASK_1.4_COMPLETION_SUMMARY.md  TASK_1.5_SUMMARY.md  TESTING_PROMPT.md  (+17 more)
.claude/commands/: analyze.md  implement.md  plan.md
.codebase-mcp/: config.example.json
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
.specify/memory/: constitution.md  exceptions.md
.specify/templates/: constitution-template.md  markdown-style-guide.md  plan-template.md
.workflow-mcp/: config.json
db/: init_tables.sql
docs/: 2025-10-10-FINAL-IMPLEMENTATION-SUMMARY.md  2025-10-10-T011-workitem-extension-summary.md  2025-10-10-T017-index-amendment-patch.md  2025-10-10-T017-index-verification-report.md  2025-10-10-feature-003-merge-summary.md  2025-10-10-phase-3.6-validation-summary.md  2025-10-10-revised-plan.md  2025-10-10-schema-fix-report.md  2025-10-10-sqlalchemy-session-fix.md  ARCHITECTURE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DATABASE_PER_PROJECT_ARCHITECTURE.md  FINAL_VALIDATION_RESULTS.md  IMPLEMENTATION_HANDOFF.md  QUICK_REFERENCE.md  README.md  REFACTORING-JOURNAL.md  ROLLBACK.md  T036-configuration-tool-implementation.md  T043-hierarchical-query-test-implementation.md  TEST_BACKGROUND_INDEXING.md  TEST_RESULTS_BACKGROUND_INDEXING.md  TEST_WORKFLOW_MCP_INDEXING.md  api.md  cache-service.md  glossary.md  logging.md  tracking-tools-implementation.md  troubleshooting.md
docs/api/: tool-reference.md
docs/architecture/: AUTO_SWITCH.md  background-indexing-tasks-merged.md  background-indexing-tasks-mvp.md  background-indexing-tasks.md  background-indexing.md  multi-project-design.md
docs/archive/: README.md
docs/configuration/: production-config.md
docs/deployment/: CI_CD_INTEGRATION.md  DOCKER_SETUP.md  HEALTH_CHECKS.md  PRODUCTION_DEPLOYMENT.md  README.md  TROUBLESHOOTING.md
docs/examples/: connection_pool_usage.py
docs/feature-requests/: 001-force-reindex-parameter.md
docs/guides/: INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  SETUP_GUIDE.md  TOOL_EXAMPLES.md  fastmcp-implementation-guide.md
docs/implementation-sessions/: 2025-10-10-phase-1-3-implementation-summary.md  2025-10-10-phase-3.5-integration-tests-summary.md  2025-10-10-session-final-summary.md  2025-10-10-status-translation-fix.md  HANDOFF.md  T019_IMPLEMENTATION_SUMMARY.md  T042_IMPLEMENTATION_SUMMARY.md
docs/mcp-split-plan/: CONSTITUTION-INIT-PROMPT.md  ENHANCED-PROMPTS-SUMMARY.md  HANDOFF-PHASE-0A-WORKFLOW-MCP.md  HANDOFF-PHASE-0B-CODEBASE-MCP.md  INIT-WORKFLOW-MCP.md  PHASE-0-ARCHITECTURAL-REVIEW.md  PHASE-0-FOUNDATION.md  PHASE-0-REVIEW.md  README.md  REORGANIZATION-SUMMARY.md  SESSION-HANDOFF-2025-10-11.md  START-HERE.md  VERIFICATION-CHECKLIST.md
docs/migration/: v1-to-v2-migration.md
docs/migrations/: 002-schema-refactoring.md  008-indexing-jobs-validation.md
docs/notes/: DEBUG_LOG.md  EXECUTIVE_SUMMARY.md  README_MCP_FIX.md  WRONG_VS_RIGHT.md
docs/operations/: DATABASE_RESET.md  DEPLOYMENT-GUIDE-SUMMARY.md  DEPLOYMENT-TROUBLESHOOTING-FLOWCHART.md  MCP-SERVER-DEPLOYMENT.md  QUICK-RESTART-GUIDE.md  README-DEPLOYMENT.md  connection_pool_monitoring.md  health-monitoring.md  incident-response.md  performance-tuning.md  prometheus-integration.md  resilience-validation-report.md
docs/performance/: DEPENDENCIES.md  README.md  T025-cross-server-integration-validation.md  T036-resilience-validation.md  T047-observability-validation.md  baseline-comparison-report.json  baseline-post-split.json  baseline-pre-split.json  load-testing-report.md  validation-report.md
docs/plans/: NEXT-TASK.md  architecture-review.md  character-limits-truncation.md  evaluation-suite.md  implementation-tasks-simplified.md  implementation-tasks.md  response-format-options.md  tool-annotations.md
docs/releases/: v0.4.0-breaking-change.md
docs/session-handoffs/: 2025-10-18-mcp-testing.md  2025-10-19-enhanced-error-handling-session.md
docs/subagent_summaries/: INDEX.md  (+1 more)
examples/: cache_usage.py  config-basic.json  config-with-database-override.json  database_session_usage.py  settings_example.py  stdio_requests.jsonl
migrations/: env.py  script.py.mako  validate_003_backup.py.txt
performance_baselines/: .gitignore  README.md
scripts/: COMPARE_BASELINES_README.md  cleanup_deleted_files.py  cleanup_registry.py  cleanup_workflow_registries.py  clear_data.sh  collect_baseline.sh  collect_connection_pool_baseline.sh  compare_baselines.py  diagnose.sh  emergency_rollback.sh  find_untracked_databases.py  generate_test_repo.py  init_db.py  init_project_schema.sql  init_registry_schema.sql  nuclear_reset.sh  parse_baseline.py  quick_start.sh  reset_database.sh  run_benchmarks.sh  run_load_tests.sh  run_test_mcp_tools.sh  setup_codebase_mcp_project.py  test_before_deploy.sh  validate_cache.py  validate_db_permissions.sh  validate_discovery.py  validate_fastmcp_context.py  validate_models.py  validate_performance.sh  validate_registry.py  validate_schema.py  verify-server-version.sh  verify_performance_deps.sh
src/: database.py  main.py
test_small_repo/: README.md  test_file.py
tests/: test_013_config_based_tracking.py  test_cache.py  test_embeddings.py  test_indexer.py  test_mcp_server.py  test_mcp_tools_README.md  test_minimal_mcp.py  test_tool_handlers.py  ultra_minimal.py
(+10515 files in other folders)
